[gd_scene load_steps=10 format=3 uid="uid://b274ja3kyfopr"]

[ext_resource type="Script" path="res://scripts/actors/enemies/bat.gd" id="1_6lvqa"]
[ext_resource type="Texture2D" uid="uid://c08lox41shcje" path="res://assets/2d/enemies/bat.png" id="1_nw7w4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_meel0"]
atlas = ExtResource("1_nw7w4")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7huvh"]
atlas = ExtResource("1_nw7w4")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks87p"]
atlas = ExtResource("1_nw7w4")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3sa4"]
atlas = ExtResource("1_nw7w4")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ponsb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_meel0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7huvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks87p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3sa4")
}],
"loop": true,
"name": &"flying",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_akxmy"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_54m51"]
radius = 11.0

[node name="Bat" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_6lvqa")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ponsb")
animation = &"flying"
autoplay = "flying"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_akxmy")

[node name="AttackArea2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea2D"]
shape = SubResource("CircleShape2D_54m51")

[connection signal="body_entered" from="AttackArea2D" to="." method="_on_attack_area_2d_body_entered"]
[connection signal="body_exited" from="AttackArea2D" to="." method="_on_attack_area_2d_body_exited"]
